--- a/loginUser.html
+++ b/loginUser.html
@@ -91,7 +91,7 @@
 </div>
 <!-- <div id="cards-container"></div> -->
 <!-- footer -->
-<footer style="background-color: #f4aeb0;" class="rounded-4 mt-auto p-4 text-center w-100">
+<footer style="background-color: #f4aeb0;" class="d-none d-md-block rounded-4 mt-auto p-4 text-center w-100">
   <div class="d-flex justify-content-between align-items-center flex-wrap">
     <div>
       <h4 style="color:#ffffff">StyleCart</h4>
@@ -103,6 +103,31 @@
 
       </div>
       <div class="d-flex">
+
+        <a href="#" class="btn rounded-4 d-flex align-items-center justify-content-center" style=" width: 40px; height: 40px;">
+          <i class="fa-brands fa-snapchat text-light fs-5"></i>
+        </a>
+        <a href="#" class="btn rounded-4 d-flex align-items-center justify-content-center" style=" width: 40px; height: 40px;">
+          <i class="fa-brands fa-youtube text-light fs-5"></i>
+        </a>
+        <a href="#" class="btn rounded-4 d-flex align-items-center justify-content-center" style=" width: 40px; height: 40px;">
+          <i class="fa-brands fa-x-twitter text-light fs-5"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<footer style="background-color: #f4aeb0;" class="d-block d-md-none rounded-4 mt-auto p-4 text-center w-100">
+  <div class="d-flex justify-content-between align-items-center flex-wrap">
+    <div>
+      <h4 style="color:#ffffff;text-align: start;">StyleCart</h4>
+      <p style="color:#ffffff;text-align: start;" class="mb-0">© 2025 All rights reserved.</p>
+    </div>
+    <div class="d-flex  flex-column">
+   
+        <h6 style="color: #ffffff;text-align: start;">Contact</h6>
+<div class="d-flex" style="text-align: start;">
 
         <a href="#" class="btn rounded-4 d-flex align-items-center justify-content-center" style=" width: 40px; height: 40px;">
           <i class="fa-brands fa-snapchat text-light fs-5"></i>
