--- a/index.html
+++ b/index.html
@@ -144,17 +144,17 @@
 <!-- <div id="cards-container"></div> -->
 <!-- footer -->
 
-<footer style="background-color: #f4aeb0;" class="rounded-4 mt-auto p-4 text-center w-100">
+<footer style="background-color: #f4aeb0;" class="d-none d-md-block rounded-4 mt-auto p-4 text-center w-100">
   <div class="d-flex justify-content-between align-items-center flex-wrap">
     <div>
-      <h4 style="color:#ffffff">StyleCart</h4>
+      <h4 style="color:#ffffff;text-align: start;">StyleCart</h4>
       <p style="color:#ffffff" class="mb-0">© 2025 All rights reserved.</p>
     </div>
     <div class="d-flex gap-3 flex-column">
-      <div>
-        <h6 style="color: #ffffff;">Contact</h6>
+   
+        <h6 style="color: #ffffff;text-align: start;">Contact</h6>
 
-      </div>
+     
       <div class="d-flex">
 
         <a href="#" class="btn rounded-4 d-flex align-items-center justify-content-center" style=" width: 40px; height: 40px;">
@@ -171,7 +171,30 @@
   </div>
 </footer>
 
+<footer style="background-color: #f4aeb0;" class="d-block d-md-none rounded-4 mt-auto p-4 text-center w-100">
+  <div class="d-flex justify-content-between align-items-center flex-wrap">
+    <div>
+      <h4 style="color:#ffffff;text-align: start;">StyleCart</h4>
+      <p style="color:#ffffff;text-align: start;" class="mb-0">© 2025 All rights reserved.</p>
+    </div>
+    <div class="d-flex  flex-column">
+   
+        <h6 style="color: #ffffff;text-align: start;">Contact</h6>
+<div class="d-flex" style="text-align: start;">
 
+        <a href="#" class="btn rounded-4 d-flex align-items-center justify-content-center" style=" width: 40px; height: 40px;">
+          <i class="fa-brands fa-snapchat text-light fs-5"></i>
+        </a>
+        <a href="#" class="btn rounded-4 d-flex align-items-center justify-content-center" style=" width: 40px; height: 40px;">
+          <i class="fa-brands fa-youtube text-light fs-5"></i>
+        </a>
+        <a href="#" class="btn rounded-4 d-flex align-items-center justify-content-center" style=" width: 40px; height: 40px;">
+          <i class="fa-brands fa-x-twitter text-light fs-5"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</footer>
  
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>    
